--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <gridgain.version>8.7.15</gridgain.version>
+        <gridgain.version>8.8.19</gridgain.version>
     </properties>
 
     <repositories>
         <repository>
             <id>GridGain External Repository</id>
-            <url>http://www.gridgainsystems.com/nexus/content/repositories/external</url>
+            <url>https://www.gridgainsystems.com/nexus/content/repositories/external</url>
         </repository>
     </repositories>
 
